--- a/event_creation/submission/configuration/config.yml
+++ b/event_creation/submission/configuration/config.yml
@@ -1,11 +1,11 @@
 
 paths : &PATHS
-  rhino_root     : &RHINO '/'
-  data_root      : !join [*RHINO,'data','eeg']
+  rhino_root     : &RHINO '/oceanus/collab/herz-lab/'
+  data_root      : !join [*RHINO,'raw_data','kahana', 'subjects']
   loc_db_root    : !join [*RHINO, 'home2', 'RAM_maint', 'stim']
-  db_root        : *RHINO
+  db_root        : !join [*RHINO,'processed_data','kahana']
   events_root    : !join [*RHINO, 'data/events']
-  freesurfer_bin : !join [*RHINO, 'usr/global/freesurfer/bin']
+  freesurfer_bin : !join [*RHINO, 'processing_code', 'freesurfer', 'bin']
   api_url_base   : &API_BASE 'http://rhino2.psych.upenn.edu:8080/api/v1/'
   brainviz_url   : !join [*API_BASE, 'brain/build/',]
   report_url     : !join [*API_BASE, 'reports/build/']
